# dsa-gp2-books-analysis

./: FinalReport.ipynb  README.md  pyproject.toml  requirements.txt
src/: prideandprejudice.py  q1_dataextract.py  q1_test.py  q1_tree.py  textanalysis.py  textpreprocessing.py
src/book_analysis/: Textbook.txt  __init__.py  q1_dataextract.py  q1_test.py  textanalysis.py  textpreprocessing.py
src/book_analysis/data/: PrideAndPrejudice.txt
test/: PrideAndPrejudice_test.txt  txtanalysis_test.py
