[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "book_analysis"
version = "0.0.1"
authors = [
  { name="Ken Low", email="kenxhlow@gmail.com" },
]
description = "function and class for analyzing the contents of a book in .txt format"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Kaxlow/dsa-gp2-books-analysis"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]